# mestrado-evangelista

./: .gitignore  .pre-commit-config.yaml  LICENSE  script.sh  script0.sh  script1.sh  script1_parexp.sh  script2.sh  script_memlong.sh  script_memshort.sh  script_testes.sh  setup.cfg
__pycache__/: Dissertação.py
resultados/: otimizados1.xlsx  otimizados2.xlsx  otimizados_classical.xlsx
resultados/individuais/: F10_cap_136_nmaq_8.xlsx  F10_cap_238_nmaq_4.xlsx  F10_cap_476_nmaq_2.xlsx  F11_cap_156_nmaq_8.xlsx  F11_cap_243_nmaq_4.xlsx  F11_cap_416_nmaq_2.xlsx  F12_cap_138_nmaq_8.xlsx  F12_cap_241_nmaq_4.xlsx  F12_cap_412_nmaq_2.xlsx  F13_cap_140_nmaq_8.xlsx  F13_cap_245_nmaq_4.xlsx  F13_cap_420_nmaq_2.xlsx  F14_cap_158_nmaq_8.xlsx  F14_cap_245_nmaq_4.xlsx  F14_cap_490_nmaq_2.xlsx  F15_cap_141_nmaq_8.xlsx  F15_cap_246_nmaq_4.xlsx  F15_cap_421_nmaq_2.xlsx  F16_cap_140_nmaq_8.xlsx  F16_cap_245_nmaq_4.xlsx  F16_cap_420_nmaq_2.xlsx  F17_cap_139_nmaq_8.xlsx  F17_cap_243_nmaq_4.xlsx  F17_cap_416_nmaq_2.xlsx  F18_cap_137_nmaq_8.xlsx  F18_cap_240_nmaq_4.xlsx  F18_cap_479_nmaq_2.xlsx  F19_cap_159_nmaq_8.xlsx  F19_cap_211_nmaq_4.xlsx  F19_cap_422_nmaq_2.xlsx  F1_cap_149_nmaq_8.xlsx  F1_cap_223_nmaq_4.xlsx  F1_cap_445_nmaq_2.xlsx  F20_cap_141_nmaq_8.xlsx  F20_cap_246_nmaq_4.xlsx  F20_cap_492_nmaq_2.xlsx  F21_cap_275_nmaq_8.xlsx  F21_cap_349_nmaq_4.xlsx  F21_cap_598_nmaq_2.xlsx  F22_cap_288_nmaq_4.xlsx  (+388 more)
src/: constants.py  first_formulation.py  main.py  read_file.py  script_memlong.sh  second_formulation.py  utils.py  zero_formulation.py
tests/: test_formulation.py
(+1289 files in other folders)
