[metadata]
name = Mestrado_Matheus_Evangelista
version = 0.0.1
author = Matheus Evangelista
author_email = m150756@dac.unicamp.br
description = Dissertação de mestrado em Engenharia de Produção e Manufatura
long_description = README.md
long_description_content_type = text/markdown
keywords = lotsizing, flexibility, setup crossover
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    docplex
    cplex
package_dir=
    =dist

[options.packages.find]
where=src